# customer_support_agent

./: .gitignore  Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-ec2.yml
customer_Support_Agent/api/: app_factory.py  dependencies.py
customer_Support_Agent/api/routers/: __init__.py  drafts.py  health.py  knowledge.py  memory.py  tickets.py
customer_Support_Agent/core/: __init__.py  settings.py
customer_Support_Agent/integration/memory/: __init__.py  mem0_store.py
customer_Support_Agent/integration/rag/: __init__.py  chroma_kb.py
customer_Support_Agent/integration/tools/: __init__.py  support_tools.py
customer_Support_Agent/repositories/sqlite/: __init__.py  base.py  customer.py  drafts.py  tickets.py
customer_Support_Agent/schemas/: __init__.py  api.py
customer_Support_Agent/services/: copilot_service.py  draft_service.py  knowledge_service.py
data/: support.db
data/chroma_mem0/: meta.json
data/chroma_rag/: chroma.sqlite3
notebook/: experiment.ipynb
notebook/notebook/data/mem0_chroma/: chroma.sqlite3
test/: test_sample.py
