[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python ="==3.12.12"
dependencies = [
    "chromadb>=1.5.2",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.10",
    "mem0ai>=1.0.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",

  
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
index-strategy = "unsafe-best-match"